fix a bug where a single card inside user-profile page was stretching to 100% height causing a very ugly looking card (stretched like Alisa in the Wonderland)

--- a/client/vite-project/src/components/user-profile/UserProfile.module.scss
+++ b/client/vite-project/src/components/user-profile/UserProfile.module.scss
@@ -79,7 +79,7 @@
 
 .quotes__container {
     grid-column: 1 / 3;
-    height: 600px;
+    min-height: 600px;
     overflow-y: scroll;
     display: flex;
     flex-wrap: wrap;
@@ -91,12 +91,11 @@
 
 .quote__card__wrapper {
     width: 200px;
+    max-height: 170px;
     padding: .75rem 1.5rem;
-    border-radius: .5rem;
-    // background-color: rgb(250, 250, 250);
+    border-radius: .1rem;
     background-color: rgb(22, 22, 22);
     color: white;
-    // box-shadow: .7rem .7rem .7rem rgb(243, 243, 243);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
